--- a/pool_log/templates/base.html
+++ b/pool_log/templates/base.html
@@ -7,6 +7,7 @@
 		{% if g.pool %}
 		<li>{{ g.pool['name'] }}</li>
 		{% endif %}
+		<li><a href="pools/create">New Pool</a></li>
 	</ul>
 </nav>
 <section class="content">
