--- a/pool_log/templates/base.html
+++ b/pool_log/templates/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-
-<title>{% block title %}{% endblock %} - Pool Log</title>
+<head>
+	<meta name="viewport" content="width=device-eidth, initial-scale=1">
+	<title>{% block title %}{% endblock %} - Pool Log</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
 <nav>
 	<h1>Pool Log</h1>
 	<ul>
-		{% if g.pool %}
-		<li>{{ g.pool['name'] }}</li>
-		{% endif %}
 		<li><a href="pools/create">New Pool</a></li>
+		<li><a href="pools/select">Select Pool</a></li>
 	</ul>
 </nav>
 <section class="content">
