--- a/pool_log/templates/base.html
+++ b/pool_log/templates/base.html
@@ -7,8 +7,9 @@
 <nav>
 	<h1>Pool Log</h1>
 	<ul>
-		<li><a href="/pools/create">New Pool</a></li>
-		<li><a href="/pools/select">Select Pool</a></li>
+		<li><a class="button stretch" href="{{ url_for('index') }}">Home</a></li>
+		<li><a class="button stretch" href="{{ url_for('pool.create') }}">New Pool</a></li>
+		<li><a class="button stretch" href="{{ url_for('pool.select') }}">Select Pool</a></li>
 	</ul>
 </nav>
 <section class="content">
