--- a/pool_log/templates/pools/create.html
+++ b/pool_log/templates/pools/create.html
@@ -10,5 +10,5 @@
 	<input name="name" id="name" required>
 	<label for="volume">Volume in Gallons</label>
 	<input name="volume" id="volume" pattern="\d+" required>
-	<input type="submit" value="Create">
+	<input class="button" type="submit" value="Create">
 {% endblock %}
