--- a/pool_log/templates/pools/select.html
+++ b/pool_log/templates/pools/select.html
@@ -12,7 +12,7 @@
 		{{ pool['name'] }}
 	</label>
 	{% endfor %}
-	<input type="submit" value="Select Pool">
+	<input class="button" type="submit" value="Select Pool">
 </form>
 <a href="{{ url_for('pool.create') }}>Create New Pool</a>
 {% endblock %}
