Added functionality for getting user UTC offset and storing it in the session

--- a/pool_log/templates/base.html
+++ b/pool_log/templates/base.html
@@ -3,6 +3,7 @@
 	<meta name="viewport" content="width=device-eidth, initial-scale=1">
 	<title>{% block title %}{% endblock %} - Pool Log</title>
 	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<script src="{{ url_for('static', filename='timezone.js') }}"></script>
 </head>
 <nav>
 	<h1>Pool Log</h1>
